<resources>
    <string name="app_name" translatable="false">ziicme</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hint_telephone">Please enter your number </string>
    <string name="title_activity_saisie_tous_infos" translatable="false">SaisieTousInfos</string>
    <string name="texte_saisie_tous_infos" translatable="false">juste pour test</string>
    <string name="numgsm">NUMBER</string>
    <string name="title_activity_smsdataexemple" translatable="false">SMSdataexemple</string>
    <string name="title_activity_zvalid_majcontact" translatable="false">ZValidMAJContact</string>
    <string name="title_activity_zlist_valid_majcontact" translatable="false">Liste des demandes de MAJ Contact</string>
    <string name="title_activity_zdetail_valid_majcontact" translatable="false">ZDetailValidMAJContact</string>
    <string name="title_activity_zsecond" translatable="false">ZSecond</string>
    <string name="title_activity_exemple" translatable="false">exemple</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="title_activity_zvalidnumber" translatable="false">Zvalidnumber</string>
    <string name="title_activity_zcartevisite" translatable="false">Zcartevisite</string>
    <string name="title_activity_zlistedemande" translatable="false">Zlistedemande</string>
    <string name="title_activity_zdetaildemande" translatable="false">Zdetaildemande</string>
    <string name="title_activity_zenvoidemande" translatable="false">Zenvoidemande</string>
    <string name="title_activity_zvalidnumero" translatable="false">Zvalidnumero</string>
    <string name="menucvbouton">COMPLETE AND RECORD YOUR CONTACT IDENTITY</string>
    <string name="menudembouton">CONTACT IDENTITY SENT TO YOU</string>
    <string name="menudesbouton">SEND YOUR CONTACT IDENTITY</string>
    <string name="cartevisitehintNOM">Please Enter a name (MANDATORY)</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_main4" translatable="false">Main4Activity</string>
    <string name="country_prompt" translatable="false">ISO code</string>
    <string name="cvtitre">ENTER / SELECT INFORMATIONS TO SEND</string>
    <string name="secnumber">Second number</string>
    <string name="thinumber">Third number</string>
    <string name="mainmail">Main mail</string>
    <string name="secmail">second mail</string>
    <string name="thimail">Third mail</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="codpost">Postal code</string>
    <string-array name="country">
        <item>AC  : +247</item>
        <item>AD  : +376</item>
        <item>AE  : +971</item>
        <item>AF  : +93</item>
        <item>AG  : +1-268</item>
        <item>AI  : +1-264</item>
        <item>AL  : +355</item>
        <item>AM  : +374</item>
        <item>AN  : +599</item>
        <item>AO  : +244</item>
        <item>AR  : +54</item>
        <item>AS  : +1-684</item>
        <item>AT  : +43</item>
        <item>AU  : +61</item>
        <item>AW  : +297</item>
        <item>AX  : +358-18</item>
        <item>AZ  : +374-97</item>
        <item>AZ  : +994</item>
        <item>BA  : +387</item>
        <item>BB  : +1-246</item>
        <item>BD  : +880</item>
        <item>BE  : +32</item>
        <item>BF  : +226</item>
        <item>BG  : +359</item>
        <item>BH  : +973</item>
        <item>BI  : +257</item>
        <item>BJ  : +229</item>
        <item>BM  : +1-441</item>
        <item>BN  : +673</item>
        <item>BO  : +591</item>
        <item>BR  : +55</item>
        <item>BS  : +1-242</item>
        <item>BT  : +975</item>
        <item>BW  : +267</item>
        <item>BY  : +375</item>
        <item>BZ  : +501</item>
        <item>CA  : +1</item>
        <item>CC  : +61</item>
        <item>CD  : +243</item>
        <item>CF  : +236</item>
        <item>CG  : +242</item>
        <item>CH  : +41</item>
        <item>CI  : +225</item>
        <item>CK  : +682</item>
        <item>CL  : +56</item>
        <item>CM  : +237</item>
        <item>CN  : +86</item>
        <item>CO  : +57</item>
        <item>CR  : +506</item>
        <item>CS  : +381</item>
        <item>CU  : +53</item>
        <item>CV  : +238</item>
        <item>CX  : +61</item>
        <item>CY  : +90-392</item>
        <item>CY  : +357</item>
        <item>CZ  : +420</item>
        <item>DE  : +49</item>
        <item>DJ  : +253</item>
        <item>DK  : +45</item>
        <item>DM  : +1-767</item>
        <item>DO  : +1-809</item>
        <item>DZ  : +213</item>
        <item>EC  : +593</item>
        <item>EE  : +372</item>
        <item>EG  : +20</item>
        <item>EH  : +212</item>
        <item>ER  : +291</item>
        <item>ES  : +34</item>
        <item>ET  : +251</item>
        <item>FI  : +358</item>
        <item>FJ  : +679</item>
        <item>FK  : +500</item>
        <item>FM  : +691</item>
        <item>FO  : +298</item>
        <item>FR  : +33</item>
        <item>GA  : +241</item>
        <item>GB  : +44</item>
        <item>GD  : +1-473</item>
        <item>GE  : +995</item>
        <item>GF  : +594</item>
        <item>GG  : +44</item>
        <item>GH  : +233</item>
        <item>GI  : +350</item>
        <item>GL  : +299</item>
        <item>GM  : +220</item>
        <item>GN  : +224</item>
        <item>GP  : +590</item>
        <item>GQ  : +240</item>
        <item>GR  : +30</item>
        <item>GT  : +502</item>
        <item>GU  : +1-671</item>
        <item>GW  : +245</item>
        <item>GY  : +592</item>
        <item>HK  : +852</item>
        <item>HN  : +504</item>
        <item>HR  : +385</item>
        <item>HT  : +509</item>
        <item>HU  : +36</item>
        <item>ID  : +62</item>
        <item>IE  : +353</item>
        <item>IL  : +972</item>
        <item>IM  : +44</item>
        <item>IN  : +91</item>
        <item>IO  : +246</item>
        <item>IQ  : +964</item>
        <item>IR  : +98</item>
        <item>IS  : +354</item>
        <item>IT  : +39</item>
        <item>JE  : +44</item>
        <item>JM  : +1-876</item>
        <item>JO  : +962</item>
        <item>JP  : +81</item>
        <item>KE  : +254</item>
        <item>KG  : +996</item>
        <item>KH  : +855</item>
        <item>KI  : +686</item>
        <item>KM  : +269</item>
        <item>KN  : +1-869</item>
        <item>KP  : +850</item>
        <item>KR  : +82</item>
        <item>KW  : +965</item>
        <item>KY  : +1-345</item>
        <item>KZ  : +7</item>
        <item>LA  : +856</item>
        <item>LB  : +961</item>
        <item>LC  : +1-758</item>
        <item>LI  : +423</item>
        <item>LK  : +94</item>
        <item>LR  : +231</item>
        <item>LS  : +266</item>
        <item>LT  : +370</item>
        <item>LU  : +352</item>
        <item>LV  : +371</item>
        <item>LY  : +218</item>
        <item>MA  : +212</item>
        <item>MC  : +377</item>
        <item>MD  : +373-533</item>
        <item>MD  : +373</item>
        <item>ME  : +382</item>
        <item>MG  : +261</item>
        <item>MH  : +692</item>
        <item>MK  : +389</item>
        <item>ML  : +223</item>
        <item>MM  : +95</item>
        <item>MN  : +976</item>
        <item>MO  : +853</item>
        <item>MP  : +1-670</item>
        <item>MQ  : +596</item>
        <item>MR  : +222</item>
        <item>MS  : +1-664</item>
        <item>MT  : +356</item>
        <item>MU  : +230</item>
        <item>MV  : +960</item>
        <item>MW  : +265</item>
        <item>MX  : +52</item>
        <item>MY  : +60</item>
        <item>MZ  : +258</item>
        <item>NA  : +264</item>
        <item>NC  : +687</item>
        <item>NE  : +227</item>
        <item>NF  : +672</item>
        <item>NG  : +234</item>
        <item>NI  : +505</item>
        <item>NL  : +31</item>
        <item>NO  : +47</item>
        <item>NP  : +977</item>
        <item>NR  : +674</item>
        <item>NU  : +683</item>
        <item>NZ  : +64</item>
        <item>OM  : +968</item>
        <item>PA  : +507</item>
        <item>PE  : +51</item>
        <item>PF  : +689</item>
        <item>PG  : +675</item>
        <item>PH  : +63</item>
        <item>PK  : +92</item>
        <item>PL  : +48</item>
        <item>PM  : +508</item>
        <item>PR  : +1-787</item>
        <item>PS  : +970</item>
        <item>PT  : +351</item>
        <item>PW  : +680</item>
        <item>PY  : +595</item>
        <item>QA  : +974</item>
        <item>RE  : +262</item>
        <item>RO  : +40</item>
        <item>RS  : +381</item>
        <item>RU  : +7</item>
        <item>RW  : +250</item>
        <item>SA  : +966</item>
        <item>SB  : +677</item>
        <item>SC  : +248</item>
        <item>SD  : +249</item>
        <item>SE  : +46</item>
        <item>SG  : +65</item>
        <item>SH  : +290</item>
        <item>SI  : +386</item>
        <item>SJ  : +47</item>
        <item>SK  : +421</item>
        <item>SL  : +232</item>
        <item>SM  : +378</item>
        <item>SN  : +221</item>
        <item>SO  : +252</item>
        <item>SO  : +252</item>
        <item>SR  : +597</item>
        <item>ST  : +239</item>
        <item>SV  : +503</item>
        <item>SY  : +963</item>
        <item>SZ  : +268</item>
        <item>TA  : +290</item>
        <item>TC  : +1-649</item>
        <item>TD  : +235</item>
        <item>TG  : +228</item>
        <item>TH  : +66</item>
        <item>TJ  : +992</item>
        <item>TK  : +690</item>
        <item>TL  : +670</item>
        <item>TM  : +993</item>
        <item>TN  : +216</item>
        <item>TO  : +676</item>
        <item>TR  : +90</item>
        <item>TT  : +1-868</item>
        <item>TV  : +688</item>
        <item>TW  : +886</item>
        <item>TZ  : +255</item>
        <item>UA  : +380</item>
        <item>UG  : +256</item>
        <item>US  : +1</item>
        <item>UY  : +598</item>
        <item>UZ  : +998</item>
        <item>VA  : +379</item>
        <item>VC  : +1-784</item>
        <item>VE  : +58</item>
        <item>VG  : +1-284</item>
        <item>VI  : +1-340</item>
        <item>VN  : +84</item>
        <item>VU  : +678</item>
        <item>WF  : +681</item>
        <item>WS  : +685</item>
        <item>YE  : +967</item>
        <item>YT  : +262</item>
        <item>ZA  : +27</item>
        <item>ZM  : +260</item>
        <item>ZW  : +263</item>
    </string-array>
    <string name="selectaudio">Select Audio</string>
    <string name="selectpicture">Select Picture</string>
    <string name="NAME">"NAME : "</string>
    <string name="validname">Enter a valid name please</string>
    <string name="nosectel">No second Tel.</string>
    <string name="nothitel">No third Tel.</string>
    <string name="nomainmail">No main mail</string>
    <string name="nosecmail">No second mail</string>
    <string name="nothimail">No third mail</string>
    <string name="noaddress">No address</string>
    <string name="notown">No town</string>
    <string name="nocodpost">No postal code</string>
    <string name="nocountry">No country</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="noringtone">No ringtone</string>
    <string name="acceptback">ACCEPT AND \nSEND BACK\n YOURS</string>
    <string name="enternumber">Please enter THIS mobile number</string>
    <string name="smssend">a SMS will be sent to it</string>
    <string name="thismobile">THIS mobile number</string>
    <string name="validate">VALIDATE</string>
    <string name="back">BACK</string>
    <string name="ringtoneplay">Ringtone to be played</string>
    <string name="record">RECORD</string>
    <string name="demtitre">IDENTITY SENT TO YOU</string>
</resources>