<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="#ffffff"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enternumber"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/textb"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/tv1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smssend"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/textb"
        android:gravity="center"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="10dp"
        android:id="@+id/tv2"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numgsm"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/textr"
        android:textColor="#000000"
        android:layout_below="@+id/tv2"
        android:gravity="center"
        android:hint="@string/thismobile" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft ="true"
        android:background="@drawable/actionbouton"
        android:textColor="#ff0000"
        android:text="@string/validate"
        android:id="@+id/buttonok"
        android:layout_alignParentBottom="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbouton"
        android:textColor="#ff0000"
        android:layout_alignParentRight = "true"
        android:text="@string/back"
        android:id="@+id/buttonout"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
