<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:background="#010101">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:textSize="16sp"
        android:text="@string/demtitre"
        android:textColor="#000000"
        android:textStyle="normal|bold"
        android:background="@drawable/textb"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numgsm"
        android:textSize="16sp"
        android:ems="20"
        android:textStyle="normal|bold"
        android:background="@drawable/textb"
        android:layout_below="@+id/tv1"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/nom"
        android:textSize="16sp"
        android:ems="20"
        android:textColor="#ff070c"
        android:background="@drawable/textb"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:layout_below="@+id/numgsm"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/num2"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:background="@drawable/textb"
        android:layout_below="@+id/nom"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nosectel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/num3"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:background="@drawable/textb"
        android:layout_below="@+id/num2"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nothitel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/mail1"
        android:textSize="14sp"
        android:ems="23"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:layout_below="@+id/num3"
        android:background="@drawable/textb"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nomainmail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/mail2"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:layout_below="@+id/mail1"
        android:background="@drawable/textb"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nosecmail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/mail3"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:layout_below="@+id/mail2"
        android:background="@drawable/textb"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nothimail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/adresse"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:layout_below="@+id/mail3"
        android:background="@drawable/textb"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/noaddress" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/ville"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:background="@drawable/textb"
        android:layout_below="@+id/adresse"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/notown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/codpost"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:background="@drawable/textb"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/ville"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nocodpost" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:id="@+id/pays"
        android:ems="23"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textCursorDrawable="@drawable/cursorshape"
        android:background="@drawable/textb"
        android:layout_below="@+id/codpost"
        android:layout_alignLeft="@+id/numgsm"
        android:layout_alignStart="@+id/numgsm"
        android:hint="@string/nocountry" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/buttonok"
        android:background="@drawable/actionbouton"
        android:textColor="#ff0000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:id="@+id/buttonout"
        android:background="@drawable/actionbouton"
        android:textColor="#ff0000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/portrait"
        android:src="@mipmap/zinterro"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:background="@drawable/portrait"
        android:layout_below="@+id/adresse"
        android:layout_alignBottom="@+id/sonnerie"
        android:layout_alignRight="@+id/buttonout"
        android:layout_alignEnd="@+id/buttonout"
        />

    <TextView
        android:id="@+id/sonnerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/pays"
        android:background="@drawable/textb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/portrait"
        android:layout_toStartOf="@+id/portrait"
        android:hint="@string/noringtone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptback"
        android:textSize="10sp"
        android:background="@drawable/actionbouton"
        android:textColor="#ff0000"
        android:id="@+id/buttonsb"

        android:layout_alignTop="@+id/buttonout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
